# TextNexus

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.project_setup/: create_issues.sh  textnexus_v2_plan.json  textnexus_v2_plan_updated.json  wire_dependencies.py
auto_rag/: __init__.py  cli.py  config.py
auto_rag/commands/: generate.py  index.py  query.py
auto_rag/core/: chunking.py  embedding.py  ingestion.py  query_engine.py  storage.py
auto_rag/llm/: connector_registry.py  llama_connector.py  lm_connector.py
auto_rag/utils/: retrieval.py
docs/: API_USAGE.md  CLI_USAGE.md  LOCAL_SETUP.md  LOCAL_VECTOR_STORE_SETUP.md  PROJECT_PLAN.md  v2_IMPLEMENTATION_PLAN.md
docs/commands/: GENERATE_COMMAND.md  INDEX_COMMAND.md  QUERY_COMMAND.md
docs/design/: A_1_Implement_Docling_Ingestion.md  A_2_Create_Structured_Text_Splitter.md  BENCHMARK_STRATEGY_NOTE.md  B_1_Integrate_Sparse_Indexing.md  C_1_Standardized_Test_Dataset.md  C_2_Implement_Retrieval_Metric_Tests.md  C_3_Implement_Generation_Metric_Tests.md  D.2_Refactor_Query_Engine.md  D_2_Refactor_Query_Engine.md
integration_tests/: test_generate_integration.py  test_storage_integration.py
resources/: sqlite_schema.sql
scripts/: generate_sample_pdf.py  start_minio.sh  verify_a_1_docling.py  verify_a_2_splitter.py  verify_b_1_sparse.py  verify_c_2_retrieval_eval.py  verify_c_3_gen_eval.py
tests/commands/: test_query.py
tests/core/: test_chunking.py  test_ingestion.py  test_ingestion_docling.py  test_ingestion_pipeline.py  test_ingestion_pipeline_integration.py  test_preprocessing.py  test_query_engine.py  test_splitters.py  test_storage.py  test_storage_sparse.py
tests/evaluation/: test_generation_metrics.py  test_retrieval_metrics.py
tests/llm/: test_llama_connector.py
tests/utils/: dataset_loader.py
textnexus/: __init__.py  cli.py
(+17 files in other folders)
