[tool.poetry]
name = "auto-rag"
version = "0.1.0"
description = "A modular Python CLI tool to create and run RAG pipelines for PDFs."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain-core = "^0.2.10"
langchain-community = "^0.2.5"
langsmith = "^0.1.75"
typer = {extras = ["all"], version = "^0.12.3"}
sentence-transformers = "^3.0.1"
pypdf = "^4.2.0"
sqlite-vss = "^0.1.2"
minio = "^7.2.7"
python-dotenv = "^1.0.1"
torch = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"