[tool.poetry]
name = "textnexus"
version = "0.1.0"
description = "A modular Python CLI tool to create and run RAG pipelines for PDFs."
authors = ["Antonio Zavaleta <antonio.zavaleta@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "textnexus"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain-core = "^0.2.10"
langchain-community = "^0.2.5"
langsmith = "^0.1.75"
typer = {extras = ["all"], version = "^0.12.3"}
sentence-transformers = "^3.0.1"
pypdf = "^4.2.0"
sqlite-vss = "^0.1.2"
minio = "^7.2.7"
python-dotenv = "^1.0.1"
nltk = "^3.8.1"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"
ollama = "^0.5.3"
codecarbon = "^3.2.0"

[tool.poetry.scripts]
textnexus = "textnexus.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.12.0"
fpdf2 = "^2.8.5"
codecarbon = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (slow, requires network/services)",
]

